--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@chakra-ui/react": "^3.2.5",
     "@chakra-ui/theme": "^3.4.6",
     "@emotion/react": "^11.14.0",
+    "@monaco-editor/react": "^4.7.0-rc.0",
     "@mui/material": "^6.3.1",
     "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "monaco-editor-textmate": "^4.0.0",
+    "monaco-textmate": "^3.0.1",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
+    "onigasm": "^2.2.5",
     "openai": "^4.77.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
